{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 56,
  "lineage": "bd0bd202-3c87-f0ed-2f1b-06d26e05f139",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09501956fa4d849b5",
            "arn": "arn:aws:ec2:us-east-1:590183789611:elastic-ip/eipalloc-09501956fa4d849b5",
            "association_id": "eipassoc-07ee38350585015a2",
            "domain": "vpc",
            "id": "eipalloc-09501956fa4d849b5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0708de676dc3a648d",
            "private_dns": "ip-10-0-10-134.ec2.internal",
            "private_ip": "10.0.10.134",
            "public_dns": "ec2-34-200-21-229.compute-1.amazonaws.com",
            "public_ip": "34.200.21.229",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183789611:internet-gateway/igw-0b1ff0e6d37cc70f6",
            "id": "igw-0b1ff0e6d37cc70f6",
            "owner_id": "590183789611",
            "region": "us-east-1",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0e9dca7687a051706"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs-demo-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183789611:loadbalancer/app/ecs-demo-alb/1688ecd19cf9d5ba",
            "arn_suffix": "app/ecs-demo-alb/1688ecd19cf9d5ba",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-demo-alb-1632661505.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183789611:loadbalancer/app/ecs-demo-alb/1688ecd19cf9d5ba",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-demo-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-04fea5ba862ba4af6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-040cdc321491eafbe"
              },
              {
                "subnet_id": "subnet-06d39af57320366e1"
              }
            ],
            "subnets": [
              "subnet-040cdc321491eafbe",
              "subnet-06d39af57320366e1"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0e9dca7687a051706",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183789611:loadbalancer/app/ecs-demo-alb/1688ecd19cf9d5ba"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183789611:listener/app/ecs-demo-alb/1688ecd19cf9d5ba/a94ec1959ea21b20",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:590183789611:targetgroup/ecs-demo-tg/a63e726554f75f51",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183789611:listener/app/ecs-demo-alb/1688ecd19cf9d5ba/a94ec1959ea21b20",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:590183789611:loadbalancer/app/ecs-demo-alb/1688ecd19cf9d5ba",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183789611:listener/app/ecs-demo-alb/1688ecd19cf9d5ba/a94ec1959ea21b20"
          },
          "dependencies": [
            "aws_lb.ecs-demo-alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183789611:targetgroup/ecs-demo-tg/a63e726554f75f51",
            "arn_suffix": "targetgroup/ecs-demo-tg/a63e726554f75f51",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:590183789611:targetgroup/ecs-demo-tg/a63e726554f75f51",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-demo-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e9dca7687a051706"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:590183789611:targetgroup/ecs-demo-tg/a63e726554f75f51"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09501956fa4d849b5",
            "association_id": "eipassoc-07ee38350585015a2",
            "connectivity_type": "public",
            "id": "nat-04096c144309f4f9f",
            "network_interface_id": "eni-0708de676dc3a648d",
            "private_ip": "10.0.10.134",
            "public_ip": "34.200.21.229",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06d39af57320366e1",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183789611:route-table/rtb-0e7a6b4ee9a031d06",
            "id": "rtb-0e7a6b4ee9a031d06",
            "owner_id": "590183789611",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04096c144309f4f9f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privateRT"
            },
            "tags_all": {
              "Name": "privateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9dca7687a051706"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183789611",
            "id": "rtb-0e7a6b4ee9a031d06",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.ngw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183789611:route-table/rtb-040e1af11e3a375eb",
            "id": "rtb-040e1af11e3a375eb",
            "owner_id": "590183789611",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b1ff0e6d37cc70f6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRT"
            },
            "tags_all": {
              "Name": "publicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9dca7687a051706"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183789611",
            "id": "rtb-040e1af11e3a375eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083c6f5dfea7c80c3",
            "region": "us-east-1",
            "route_table_id": "rtb-0e7a6b4ee9a031d06",
            "subnet_id": "subnet-0e208d38ed8838a40"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dffc84239f8cf61",
            "region": "us-east-1",
            "route_table_id": "rtb-040e1af11e3a375eb",
            "subnet_id": "subnet-06d39af57320366e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9fdcf44ce418fa5",
            "region": "us-east-1",
            "route_table_id": "rtb-040e1af11e3a375eb",
            "subnet_id": "subnet-040cdc321491eafbe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183789611:security-group/sg-04fea5ba862ba4af6",
            "description": "Allow internet traffic to alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fea5ba862ba4af6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "590183789611",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "tags_all": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9dca7687a051706"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183789611",
            "id": "sg-04fea5ba862ba4af6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183789611:security-group/sg-009519ff0900fe7b5",
            "description": "Allow internet traffic to alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009519ff0900fe7b5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04fea5ba862ba4af6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_task_sg",
            "name_prefix": "",
            "owner_id": "590183789611",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs_task_sg"
            },
            "tags_all": {
              "Name": "ecs_task_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9dca7687a051706"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183789611",
            "id": "sg-009519ff0900fe7b5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183789611:subnet/subnet-0e208d38ed8838a40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e208d38ed8838a40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183789611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0e9dca7687a051706"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183789611",
            "id": "subnet-0e208d38ed8838a40",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183789611:subnet/subnet-06d39af57320366e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d39af57320366e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183789611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0e9dca7687a051706"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183789611",
            "id": "subnet-06d39af57320366e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183789611:subnet/subnet-040cdc321491eafbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040cdc321491eafbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183789611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public_2"
            },
            "tags_all": {
              "Name": "public_2"
            },
            "vpc_id": "vpc-0e9dca7687a051706"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183789611",
            "id": "subnet-040cdc321491eafbe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183789611:vpc/vpc-0e9dca7687a051706",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-066f5952b13bd1395",
            "default_route_table_id": "rtb-076a6a02127f48719",
            "default_security_group_id": "sg-09a317cd05104c4b4",
            "dhcp_options_id": "dopt-07c37f5875aa22d98",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e9dca7687a051706",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076a6a02127f48719",
            "owner_id": "590183789611",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183789611",
            "id": "vpc-0e9dca7687a051706",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}